--- a/index.html
+++ b/index.html
@@ -9,13 +9,13 @@
 
         <div class='flexbox'>
             <div class='header'>
-                Header
+                <a href="https://splashceles.myportfolio.com/">Splash Celes</a>
             </div>
             <div class='img-container'>
                 <img id='img' src ="images/Heat_Pollution_p1.png">
             </div>
             <div class ='footer'>
-                Footer
+
             </div>
         </div>
     
