--- a/index.html
+++ b/index.html
@@ -9,7 +9,13 @@
 
         <div class='flexbox'>
             <div class='header'>
-                <a href="https://splashceles.myportfolio.com/">Splash Celes</a>
+                <div>
+                    <a href="https://splashceles.myportfolio.com/">Home</a>
+                    <a href="https://splashceles.myportfolio.com/work">Comics</a>
+                    <a href="https://splashceles.myportfolio.com/photography">Photography</a>
+                </div>
+                <div id='name'><a href="https://splashceles.myportfolio.com/">Splash Celes</a></div>
+                <div></div>
             </div>
             <div class='img-container'>
                 <img id='img' src ="images/Heat_Pollution_p1.png">
