--- a/index.html
+++ b/index.html
@@ -4,6 +4,9 @@
 <title>Heat Pollution</title>
 <link rel="stylesheet" href="styles.css">
 <script src="scripts.js"></script>
+    <style type="text/css">
+    @font-face{font-family:bjpg;src:url(https://use.typekit.net/af/54d47a/000000000000000000017750/27/l?subset_id=2&fvd=n4&v=3) format("woff2"),url(https://use.typekit.net/af/54d47a/000000000000000000017750/27/d?subset_id=2&fvd=n4&v=3) format("woff"),url(https://use.typekit.net/af/54d47a/000000000000000000017750/27/a?subset_id=2&fvd=n4&v=3) format("opentype");font-weight:400;font-style:normal;font-stretch:normal;font-display:auto;}@font-face{font-family:bjpg;src:url(https://use.typekit.net/af/f7ef3a/00000000000000007735a6cd/30/l?subset_id=2&fvd=n6&v=3) format("woff2"),url(https://use.typekit.net/af/f7ef3a/00000000000000007735a6cd/30/d?subset_id=2&fvd=n6&v=3) format("woff"),url(https://use.typekit.net/af/f7ef3a/00000000000000007735a6cd/30/a?subset_id=2&fvd=n6&v=3) format("opentype");font-weight:600;font-style:normal;font-stretch:normal;font-display:auto;}@font-face{font-family:bjpg;src:url(https://use.typekit.net/af/3e2979/00000000000000007735a6b9/30/l?subset_id=2&fvd=n7&v=3) format("woff2"),url(https://use.typekit.net/af/3e2979/00000000000000007735a6b9/30/d?subset_id=2&fvd=n7&v=3) format("woff"),url(https://use.typekit.net/af/3e2979/00000000000000007735a6b9/30/a?subset_id=2&fvd=n7&v=3) format("opentype");font-weight:700;font-style:normal;font-stretch:normal;font-display:auto;}@font-face{font-family:bjpg;src:url(https://use.typekit.net/af/2c2141/00000000000000007735a6bd/30/l?subset_id=2&fvd=n9&v=3) format("woff2"),url(https://use.typekit.net/af/2c2141/00000000000000007735a6bd/30/d?subset_id=2&fvd=n9&v=3) format("woff"),url(https://use.typekit.net/af/2c2141/00000000000000007735a6bd/30/a?subset_id=2&fvd=n9&v=3) format("opentype");font-weight:900;font-style:normal;font-stretch:normal;font-display:auto;}
+    </style>
 </head>
 <body>
 
